locust-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: locust-cluster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - args:
            - -f
            - /mnt/locust/locustfile.py
            - --worker
            - --master-host=master
          name: worker
          image: locustio/locust
          volumeMounts:
          - mountPath: /mnt/locust
            name: locust-scripts
      volumes:
        - name: locust-scripts
          configMap:
            name: scripts-cm
