locust.yaml
apiVersion: v1

kind: Service
metadata:
  name: master
  labels:
    app: locust-cluster
spec:
  selector:
    app: master
  ports:
    - port: 8089
      targetPort: 8089
      name: web
    - port: 5557
      targetPort: 5557
      name: listenworker
    - port: 5558
      targetPort: 5558
      name: listenworker2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master
  labels:
    app: locust-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master
  template:
    metadata:
      labels:
        app: master
    spec:
      containers:
        - args:
            - -f
            - /mnt/locust/locustfile.py
            - --master
          name: master
          image: locustio/locust
          ports:
          - containerPort: 8089
          volumeMounts:
          - mountPath: /mnt/locust
            name: locust-scripts
      volumes:
        - name: locust-scripts
          configMap:
            name: scripts-cm
