ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  labels:
    app: locust-cluster
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: master
            port:
              number: 8089
